@@ -1,6 +1,9 @@
 v3.8.0-beta.1 (2021-04-20)
 --------------------------
 
+* Retry if an ex-leader can no longer drop a follower because it is no longer
+  leading.
+
 * Fix BTS-374: thread race between ArangoSearch link unloading and storage
   engine WAL flushing.
 
@@ -23,7 +26,7 @@ v3.8.0-beta.1 (2021-04-20)
 
 * Fix crashes during arangorestore operations due to usage of wrong pointer
   value for updating user permissions.
-  
+
 * Fixed BTS-360 and ES-826: sporadic ArangoSearch error `Invalid RL encoding in
   'dense_fixed_offset_column_key'`.
 
